src/components/ChatComponents/ChatItemDisplay.css
.cid_bg {
    background-color: transparent;
    height: 100%;
    display: flex;
    flex-direction: column;
    min-width: 400px;
}

#cid_chaat_id {
  color: white;
  text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.8); 
  padding: 2vmin;
  padding-left: 4vmin;
  border-radius: 5vmin;
}

#cid_chat {
    flex-grow: 9;
    padding: 10px;
    overflow: auto;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
}

.cid_bg > ::-webkit-scrollbar {
    width: 30px;
  }
  
  /* Track 
  ::-webkit-scrollbar-track {
    box-shadow: inset 0 0 5px grey; 
    border-radius: 10px;
  }*/
   
  /* Handle */
  ::-webkit-scrollbar-thumb {
    background: rgba(255, 255, 255, 0.224); 
    border-radius: 0;
  }
  
  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    background: rgba(255, 255, 255, 0.3); 
  }

#cid_inputs {
    color: gray;
    size: 10px;
    background-color: rgba(200, 200, 200, 0);
    display: flex;
    flex-direction: row;
    height: 80px;
    max-height: 80px;
    justify-content: space-between;
    align-items: center;
    border-radius: 40px;
    padding: 10px;
}

#cid_inputs .btn-circle{
  /*background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 49%, rgba(255, 255, 255, 0.5) 49%);*/
  background-color: rgba(255, 255, 255, 0.0);
  color: black;
  font-size: 20px !important;
  height: 50px;
  width: 50px;
  flex: 0 1 50px;
  border-radius: 25px !important;
  border: 0px;
}

#uploadOptions{
  background-color: transparent;
  flex-direction: row-reverse;
  padding: 10px;
}

#uploadOptions .icon_circle {
    /*background-image: linear-gradient( rgb(177, 68, 139) 50%, rgb(163, 6, 87) 50%);*/
    background-color: rgba(187, 200, 255, 0.372);
    color: black;
    margin: 5px;
    font-size: 20px !important;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    height: 50px;
    width: 50px;
    flex: 0;
    border-radius: 30px !important;
    border: 0px;
}

#cid_buttons {
  min-width: fit-content;
}

#cid_text {
    background-color: rgba(255, 255, 255, 0.24) !important;
    box-shadow: inset 5px 5px 10px -5px black;
    border-color: transparent;
    height: 50px;
    overflow: scroll;
    padding: 15px;
    font-size: 20px;
    font-weight: 600;
    margin-left: 10px;
    margin-right: 20px;
    flex: 1 1 auto;
    border-radius: 30px !important;
}

#mulMedPrev {
  max-width: 100px;
  max-height: 100px;
}

#mulMedContainer {
  width: fit-content;
  height: fit-content;
  position: relative;
}

#mulMedContainer button {
  position: absolute;
  height: 40px;
  width: 40px;
  border-radius: 20px;
  background-color: rgb(202, 202, 202);
  color: black;
  font-weight: 600;
  border: 0px;
  right: -10px;
  top: -10px;
}

